# niche-elf

./: .gitignore  lint.sh  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
docs/: add-symbol-file.md  lldb-fun.md  todo.md
examples/: simple.py
niche_elf/: __init__.py  builder.py  datatypes.py  elf.py  structures.py  symbols.py  util.py  writer.py
